--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gitdown-cli",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "description": "Download directory and files from github repository",
   "main": "src/index.js",
   "bin": {
-    "gitdown": "gitdown.js"
+    "gitdown": "bin/gitdown.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
